# 2026.1-MeasureSoftGram-Service

./: .coveragerc  .flake8  .gitignore  Dockerfile  MSG.postman_collection.json  Makefile  README.md  docker-compose.yml  parser.py  pyproject.toml  requirements.txt  sonar-project.properties  test.json  tox.ini
.github/workflows/: build.yml  deploy-prod.yml  deployment.yml  docker-publish.yml  linter.yml  metrics.yml  msgram.yml  test.yml
deploy/: docker-compose.prod.yml
deploy/nginx/: default.conf
env-vars-example/: .postgres.env  .service.env
grafana/: README.md  seed_planejado_vs_realizado.sql
grafana/dashboards/: 1-vis-o-geral-de-qualidade.json  2-evolu-o-temporal.json  3-an-lise-por-entidade.json  3-tsqmi-por-repositorio.json.old  4-meta-modelo-e-pesos.json  5-distribui-o-estat-stica.json  6-rela-es-e-correla-es.json  7-tsqmi-ecg.json  dashboard-ecg-tsqmi.json  dashboard-evolucao.json  dashboard-saude-qualidade-repositorio.json  dashboard-visao-geral.json
src/: pytest.ini  start_service.sh
src/accounts/: models.py  serializers.py  signals.py  tests.py  urls.py  views.py
src/characteristics/: models.py  tests.py  views.py
src/config/: settings.py  urls.py
src/entity_trees/: serializers.py  views.py
src/goals/: serializers.py  views.py
src/grafana_proxy/: apps.py  models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
src/math_model/: serializer.py  services.py  utils.py  views.py
src/measures/: models.py  views.py
src/metrics/: models.py  serializers.py  views.py
src/organizations/: mixins.py  (+4 more)
(+49 files in other folders)
